[package]
name = "bls-signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.3"
ark-ff = "0.3"
ark-ec = "0.3"
ark-serialize = "0.3"
ark-bls12-381 = "0.3"
ark-crypto-primitives = "0.3"
blake2s_simd = "0.5"

rand = "0.8"
rand_chacha = "0.3"

num-bigint = {version="0.4.3", features=["rand"]}
hex = "0.4"

# command line argument parser
clap = {version="4.0", features=["derive"]}
